# GrobidMetaAnalytics

./: .gitignore  CITATION.cff  Dockerfile  README.md  TODO.md  codemeta.json  docker-compose.yml  main.sh  pyproject.toml  rationale.md  report-generator.py  report_generator.py
config/python/: docker_config.json
crf-papers/: 1506.02753.pdf.tei.xml  1706.07979.pdf.tei.xml  1711.09784.pdf.tei.xml  1711.11279.pdf.tei.xml  1802.01933.pdf.tei.xml  1804.11191.pdf.tei.xml  1806.00069.pdf.tei.xml  1904.08939.pdf.tei(1).xml  1904.08939.pdf.tei.xml  2006.00093.pdf.tei.xml  2111.13171.pdf.tei.xml  IoannisChalkiadakis_RRR.pdf.tei.xml
docs/: index.rst  requirements.txt
